RESOLVED FIXED98995
[Chromium][Mac] r130994 seems to break chromium gpu test
https://bugs.webkit.org/show_bug.cgi?id=98995
Summary [Chromium][Mac] r130994 seems to break chromium gpu test
Shinya Kawanaka
Reported 2012-10-10 23:19:24 PDT
Attachments
Patch (1.45 KB, patch)
2012-10-11 07:24 PDT, Justin Novosad
no flags
Justin Novosad
Comment 1 2012-10-11 07:02:39 PDT
This assertion fires because there is a built-in assumption that 2d canvas operations are always triggered from within a WebThread task. This test appears to be an exception to that assumption.
Justin Novosad
Comment 2 2012-10-11 07:24:51 PDT
Stephen White
Comment 3 2012-10-11 07:25:27 PDT
Comment on attachment 168225 [details] Patch OK. r=me
WebKit Review Bot
Comment 4 2012-10-11 07:49:57 PDT
Comment on attachment 168225 [details] Patch Clearing flags on attachment: 168225 Committed r131059: <http://trac.webkit.org/changeset/131059>
WebKit Review Bot
Comment 5 2012-10-11 07:50:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.