[Chromium][Mac] r130994 seems to break chromium gpu test https://bugs.webkit.org/show_bug.cgi?id=98995

Patch by Justin Novosad <junov@chromium.org> on 2012-10-11
Reviewed by Stephen White.

Removing unnecessary assertion that was based on an invalid assumption
that 2d canvas draw operations were always called from within WebThread
tasks.

Test: Canvas2DAllowed chromium gpu_test

* platform/graphics/chromium/Canvas2DLayerManager.cpp:
(WebCore::Canvas2DLayerManager::willProcessTask):

Canonical link: https://commits.webkit.org/117029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131059 268f45cc-cd09-0410-ab3c-d52691b4dbfc